Fixed so that filters collapse earlier

--- a/f1_info_frontend/src/app/driver-report/driver-report.component.scss
+++ b/f1_info_frontend/src/app/driver-report/driver-report.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
 
-  @media(max-width: 500px) {
+  @media(max-width: 800px) {
     flex-direction: column;
     margin-bottom: 2rem;
   }
